# fault-in-our-stars

./: README.md
decoder/: CMakeLists.txt  main.cpp
example_instance/: config.json  instance.json
gpu_decoder/: CMakeLists.txt  array3d.cpp  array3d.h  compile_flags.txt  main.cu  ntl_utils.cpp  ntl_utils.h  utils.cpp  utils.h
infrastructure/ansible/: requirements.txt
infrastructure/pulumi/: __main__.py
protocol/: CMakeLists.txt
protocol/bench/: obliv_poly_eval.cpp
scripts/: find_best_sample_size.sage  generate_instance.sage  gpu_memory_needed.py  leakage_calculator.sage  max-rank.sage  popstar_simulator.sage
